Implement basic model-based approach with basic tests for routing without animation

--- a/Demos/Portus iOS-Demo/Portus iOS-Demo/FlowB/FlowB.storyboard
+++ b/Demos/Portus iOS-Demo/Portus iOS-Demo/FlowB/FlowB.storyboard
@@ -23,11 +23,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IBN-Wa-i3q">
+                                <rect key="frame" x="114.5" y="617" width="146" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="UhM-Ph-xGg"/>
+                                </constraints>
+                                <state key="normal" title="Use Portkey to FlowA"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="HEC-BN-ycs" firstAttribute="centerX" secondItem="InI-pj-KLc" secondAttribute="centerX" id="HKL-Nf-dPX"/>
+                            <constraint firstItem="IBN-Wa-i3q" firstAttribute="centerX" secondItem="B8Q-Je-q0k" secondAttribute="centerX" id="dbg-Z1-0Rf"/>
                             <constraint firstItem="HEC-BN-ycs" firstAttribute="centerY" secondItem="InI-pj-KLc" secondAttribute="centerY" id="g1J-gb-RGQ"/>
+                            <constraint firstItem="InI-pj-KLc" firstAttribute="bottom" secondItem="IBN-Wa-i3q" secondAttribute="bottom" constant="20" id="yrq-qb-Dwh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="InI-pj-KLc"/>
                     </view>
