--- a/Demos/Portus iOS-Demo/Portus iOS-Demo/FlowA/FlowA.storyboard
+++ b/Demos/Portus iOS-Demo/Portus iOS-Demo/FlowA/FlowA.storyboard
@@ -23,10 +23,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5S-Px-Xt1">
+                                <rect key="frame" x="114" y="617" width="147" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="LxV-6e-g0x"/>
+                                    <constraint firstAttribute="height" constant="30" id="jDc-uB-oKW"/>
+                                </constraints>
+                                <state key="normal" title="Use Portkey to FlowB"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="e5S-Px-Xt1" firstAttribute="centerX" secondItem="gPX-Vb-4Bf" secondAttribute="centerX" id="2W5-R8-d7f"/>
                             <constraint firstItem="a40-SF-s4V" firstAttribute="centerY" secondItem="Dpy-JN-JHi" secondAttribute="centerY" id="SSm-0n-qpo"/>
+                            <constraint firstItem="Dpy-JN-JHi" firstAttribute="bottom" secondItem="e5S-Px-Xt1" secondAttribute="bottom" constant="20" id="X5k-gW-NDR"/>
                             <constraint firstItem="a40-SF-s4V" firstAttribute="centerX" secondItem="Dpy-JN-JHi" secondAttribute="centerX" id="pDb-LN-gXx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dpy-JN-JHi"/>
