Implement non static approach

--- a/Demos/Portus iOS-Demo/Portus iOS-Demo/Startup/Startup.storyboard
+++ b/Demos/Portus iOS-Demo/Portus iOS-Demo/Startup/Startup.storyboard
@@ -17,6 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Root" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PjE-LL-TuS">
+                                <rect key="frame" x="169.5" y="261.5" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="kvo-EI-01K">
                                 <rect key="frame" x="130" y="328.5" width="115" height="30"/>
                                 <subviews>
@@ -39,6 +45,8 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kvo-EI-01K" firstAttribute="top" secondItem="PjE-LL-TuS" secondAttribute="bottom" constant="46.5" id="NaB-Ds-jt7"/>
+                            <constraint firstItem="PjE-LL-TuS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gIn-pk-iQR"/>
                             <constraint firstItem="kvo-EI-01K" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jKh-EO-7A0"/>
                             <constraint firstItem="kvo-EI-01K" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="oNf-C0-MWZ"/>
                         </constraints>
